--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "guava": "^0.0.5",
     "vue": "^3.2.13",
     "vue-colour-picker": "^0.0.5"
   },
